--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "@babel/preset-react": "^7.7.4",
         "axios": "^0.19",
-        "cross-env": "^5.1",
-        "laravel-mix": "^4.0.7",
-        "lodash": "^4.17.13",
-        "resolve-url-loader": "^2.3.1",
-        "sass": "^1.15.2",
-        "sass-loader": "^7.1.0"
+        "cross-env": "^6.0.3",
+        "laravel-mix": "^5.0.0",
+        "lodash": "^4.17.15",
+        "react": "^16.12.0",
+        "react-dom": "^16.12.0",
+        "resolve-url-loader": "^3.1.1",
+        "sass": "^1.23.7",
+        "sass-loader": "^8.0.0"
+    },
+    "dependencies": {
+        "react-router-dom": "^5.1.2",
+        "redux": "^4.0.4"
     }
 }
