--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "@babel/plugin-proposal-class-properties": "^7.7.4",
         "@babel/preset-react": "^7.7.4",
         "axios": "^0.19",
         "cross-env": "^6.0.3",
@@ -23,6 +24,9 @@
     },
     "dependencies": {
         "react-router-dom": "^5.1.2",
+        "classnames": "^2.2.6",
+        "prop-types": "^15.7.2",
+        "bootstrap": "^4.4.1",
         "redux": "^4.0.4"
     }
 }
