--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
         "classnames": "^2.2.6",
         "prop-types": "^15.7.2",
         "bootstrap": "^4.4.1",
-        "redux": "^4.0.4"
+        "reactstrap": "^8.2.0",
+        "redux": "^4.0.4",
+        "react-cropper": "^1.3.0",
+        "react-input-mask": "^2.0.4"
     }
 }
